--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 11 16:43:25 KST 2024
-sdk.dir=C\:\\Users\\715ji\\AppData\\Local\\Android\\Sdk
+#Wed Jul 03 12:05:41 KST 2024
+sdk.dir=C\:\\Users\\ymj03\\AppData\\Local\\Android\\Sdk
